--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,32 @@
     <title>Document</title>
     <link rel="stylesheet" href="wil.css">
 </head>
+
 <body>
 
-<div class="TopBox">
-    <p>Sport club</p>
-    <h3>Muscle Magic</h3>
-    <h3>356789045673456</h3>
-    <p>Used 7/10 activities</p>
-    <div class="container">
-    <div class="progressBar"></div>
-</div>
-</div>
+    <div class="TopBox">
+        <p>Sport club</p>
+        <h3>Muscle Magic</h3>
+        <h3>356789045673456</h3>
+        <p>Used 7/10 activities</p>
+        <div class="container">
+            <div class="progressBar"></div>
+        </div>
 
-<div class="Box">
-    <div class="BoxOptions"><img src="Images/add.png" alt=""><p>Refill activities</p><img  src="Images/arrow.png"></div>
-    <div class="BoxOptions"><img src="Images/friends.png" alt=""><p>Pass to a friend</p><img src="Images/arrow.png"></div>
-    <div class="BoxOptions"><img src="Images/location.png" alt=""><p>Our clubs</p><img id="arrow" src="Images/arrow.png"></div>
-    <div class="BoxOptions"><img src="Images/settings.png" alt=""><p>Account setup</p><img  src="Images/arrow.png"></div>
-</div>
 
-    
+
+        <div class="Box">
+            <div class="BoxOptions"><img src="Images/add.png" alt="">
+                <p>Refill activities</p><img src="Images/arrow.png"></div>
+            <div class="BoxOptions"><img src="Images/friends.png" alt="">
+                <p>Pass to a friend</p><img src="Images/arrow.png"></div>
+            <div class="BoxOptions"><img src="Images/location.png" alt="">
+                <p>Our clubs</p><img id="arrow" src="Images/arrow.png"></div>
+            <div class="BoxOptions"><img src="Images/settings.png" alt="">
+                <p>Account setup</p><img src="Images/arrow.png"></div>
+        </div>
+
+
 </body>
+
 </html>
