--- a/02-JavaScript/07-DOM manipulations/Roi/Homework/index.html
+++ b/02-JavaScript/07-DOM manipulations/Roi/Homework/index.html
@@ -4,21 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="dist/style.css">
     <title>Document</title>
 </head>
 <body>
-    <svg
-    class="progress-ring"
-    width="120"
-    height="120">
- <circle class="progress-ring__circle"
-   stroke="white"
-   stroke-width="4"
-   fill="transparent"
-   r="52"
-   cx="60"
-   cy="60"/>
-</svg>
-    <script src="index.js"></script>
+<div class = "box">box</div>
+<div class = "circle">circle</div>
+<script src="dist/index.js"></script>
 </body>
 </html>
