--- a/02-JavaScript/07-DOM manipulations/Alex/index.html
+++ b/02-JavaScript/07-DOM manipulations/Alex/index.html
@@ -19,6 +19,12 @@
     <script>
         document.getElementById("shopping").style.color = "blue";
         document.getElementById("shopping").style.fontSize = "x-large";
+        const myTimeout = setTimeout(hello, 500);
+
+        function hello() {
+            document.getElementById("shopping").innerHTML = "buy pizza"
+
+        }
     </script>
 </body>
 
