--- a/02-JavaScript/07-DOM manipulations/Alex/index.html
+++ b/02-JavaScript/07-DOM manipulations/Alex/index.html
@@ -19,9 +19,10 @@
     <script>
         document.getElementById("shopping").style.color = "blue";
         document.getElementById("shopping").style.fontSize = "x-large";
-        const myTimeout = setTimeout(hello, 500);
 
-        function hello() {
+        const myTimeout = setTimeout(change, 500);
+
+        function change() {
             document.getElementById("shopping").innerHTML = "buy pizza"
 
         }
