--- a/02-JavaScript/07-DOM manipulations/OmriAharonov/homeWork.html
+++ b/02-JavaScript/07-DOM manipulations/OmriAharonov/homeWork.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="dist/homeWork.css">
     <title>Document</title>
 </head>
 
 <body>
     <div class="box">
-        <h1 id="header">
-            Article Header
-        </h1>
+        <h1 id="header">   </h1>
+
         <div class="img">
             <img src="https://picsum.photos/seed/picsum/200/300">
         </div>
+        
         <div class="text">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
             Accusamus corrupti veniam, 
