shani js practice

--- a/02-JavaScript/07-DOM manipulations/Example/shani-HW/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/shani-HW/index.html
@@ -22,7 +22,7 @@
         
     </div>
     <div id="Bye">
-        <h1><span id="goodbye"> Bye</span> <span id="shalombye">Bye </span> <span id="adios"> Bye </span></h1>
+        <h1><span id="goodbye"> BYE</span> <span id="shalombye">BYE </span> <span id="adios"> BYE</span></h1>
         
     </div>
     <script src="dist/index.js"></script>
