--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Index.html
@@ -15,26 +15,22 @@
       <div class="Container__header__MenuBtn"><img src="Images/MenuBtn.png"></div>
     </div>
     <div class="Container__Wil">
-      <div class="Container__Wil__statBox">
-        <div class="Container__Wil__statBox__heading"></div>
-        <div class="Container__Wil__statBox__gaugeBox">
-          <div class="gauge">
-            <div class="gauge__body">
-              <div class="gauge__body__fill"></div>
-              <div class="gauge__body__cover1">
-                <div class="gauge__body__cover1__circle">
-                 <div class="gauge__body__cover1__circle--a">🔥</div>
-                 <div class="gauge__body__cover1__circle--b"><b>92%</b></div>
-                 <div class="gauge__body__cover1__circle--c">Activity</div>
-                </div>
-              </div>
-              <div class="gauge__body__cover2"></div>
-            </div>
-          </div>
-        </div>
-        <div class="Container__Wil__statBox__statBtn"></div>
-        <div class="Container__Wil__statBox__viewDetails"></div>
-      </div>
+      <div class="TopBox">
+        <p>Sport club</p>
+        <h3>Muscle Magic</h3>
+        <h3>356789045673456</h3>
+        <p>Used 7/10 activities</p>
+        <div class="container">
+        <div class="progressBar"></div>
+    </div>
+    </div>
+    
+    <div class="Box">
+        <div class="BoxOptions"><img src="Images/add.png" alt=""><p>Refill activities</p><img  src="Images/arrow.png"></div>
+        <div class="BoxOptions"><img src="Images/friends.png" alt=""><p>Pass to a friend</p><img src="Images/arrow.png"></div>
+        <div class="BoxOptions"><img src="Images/location.png" alt=""><p>Our clubs</p><img id="arrow" src="Images/arrow.png"></div>
+        <div class="BoxOptions"><img src="Images/settings.png" alt=""><p>Account setup</p><img  src="Images/arrow.png"></div>
+    </div>
     </div>
  
     <div class="Container__Roi">Roi</div>
@@ -46,5 +42,8 @@
       <div class="Container__Navbar--Btn"><img src="Images/stat.png"></div>
     </div>
   </div>
+
+  
+
 </body>
 </html>
