--- a/02-JavaScript/07-DOM manipulations/mishaHw/running text/index.html
+++ b/02-JavaScript/07-DOM manipulations/mishaHw/running text/index.html
@@ -10,7 +10,13 @@
 
 <body>
     <h1>Running text</h1>
-    <div id="text"></div>
+    <div id="text">Michael Dubovik.....</div>
+
+    <div id="lorem-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, ad voluptate. Fuga, atque est dolor omnis
+        eveniet molestias facere exercitationem, totam deserunt fugit autem perspiciatis vel earum amet temporibus
+        accusamus?
+    </div>
 
     <script src="./index.js"></script>
 </body>
