--- a/02-JavaScript/06-typescript/Khemich/indexx.html
+++ b/02-JavaScript/06-typescript/Khemich/indexx.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <script src="dist/indexx.js"></script>
+    <div id="one"> aa</div>
+    <div class="two">bb</div>
 </body>
 </html>
