--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Index.html
@@ -33,7 +33,31 @@
     </div>
     </div>
  
-    <div class="Container__Roi">Roi</div>
+    <div class="Container__Roi">
+        <h1>You are 72% active<br>this month than last</h1>
+        <div class="gBox">
+          <svg width="450" height="300" fill="black" stroke="#9966cc" stroke-width="20" stroke-linecap="round">
+          <circle transform="rotate(150 200 200)" cx="150" cy="240" r="120" pathLength="170"/>
+          </svg>
+          <div class="gBox__innerCircle">
+            <div class="gBox__innerCircle--1">🔥</div>
+            <div class="gBox__innerCircle--2"><b>92%</b></div>
+            <div class="gBox__innerCircle--3">Activity</div>
+           </div>
+          </div>
+           <div class="statBtn">
+            <div class="statBtn--icon1">🏋🏻</div>
+            <div class="statBtn--icon2">🏊‍♂️</div>
+            <div class="statBtn--icon3">🥗</div>
+           </div>
+           <div class="lowerTxt">
+             <div class="lowerTxt--Gym">Gym</div>
+             <div class="lowerTxt--Swim">Swimming</div>
+             <div class="lowerTxt--Diet">Diet</div>
+           </div>
+           <div class="viewDetails"><p>View details</p></div>
+        </div>
+    
     <div class="Container__Yael">Yael</div>
     <div class="Container__Navbar">
       <div class="Container__Navbar--Btn"><img src="Images/home.png"></div>
