--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.html
@@ -28,7 +28,7 @@
             <div class="BoxOptions"><img src="Images/friends.png" alt="">
                 <p>Pass to a friend</p><img src="Images/arrow.png"></div>
             <div class="BoxOptions"><img src="Images/location.png" alt="">
-                <p>Our clubs</p><img id="arrow" src="Images/arrow.png"></div>
+                <p>Our clubs</p><img src="Images/arrow.png"></div>
             <div class="BoxOptions"><img src="Images/settings.png" alt="">
                 <p>Account setup</p><img src="Images/arrow.png"></div>
         </div>
