--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/yael/index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/yael/index.html
@@ -13,7 +13,7 @@
 <body>
     
     <section class="content">
-        <h1>Services  <img src="images/raised_hands_imogy_prev_ui.png">
+        <h1>Services  <img id="hands" src="images/raised_hands_imogy_prev_ui.png"><img id="menu1" src="images/menu-removebg-preview.png">
         </h1>    
         <ul id="menu" class="card-list">
             <div class="card-list__slider owl-carousel">
