--- a/01-HTML-CSS/09-animations/Roi/Statistics/Index.html
+++ b/01-HTML-CSS/09-animations/Roi/Statistics/Index.html
@@ -17,26 +17,29 @@
     <div class="Container__Roi">
       <h1>You are 72% active<br>this month than last</h1>
       <div class="gBox">
-        <svg width="100%" height="230" fill="black" stroke="#9966cc" stroke-width="20" stroke-linecap="round">
-        <circle transform="rotate(150 200 200)" cx="170" cy="250" r="120" pathLength="170"/>
+        <svg width="100%" height="300" fill="black" stroke="#9966cc" stroke-width="20" stroke-linecap="round">
+        <circle class="myCircle" transform="rotate(150 200 200)" cy="120" r="120" pathLength="170"/>
         </svg>
         <div class="gBox__innerCircle">
           <div class="gBox__innerCircle--1">🔥</div>
           <div class="gBox__innerCircle--2"><b>92%</b></div>
           <div class="gBox__innerCircle--3">Activity</div>
          </div>
+        </div>
          <div class="statBtn">
           <div class="statBtn--icon1">🏋🏻</div>
           <div class="statBtn--icon2">🏊‍♂️</div>
           <div class="statBtn--icon3">🥗</div>
          </div>
-        </div>
+        
         <div class="lowerTxt">
           <div class="lowerTxt--Gym">Gym</div>
           <div class="lowerTxt--Swim">Swimming</div>
           <div class="lowerTxt--Diet">Diet</div>
         </div>
-        <div class="viewDetails">View details</div>
+        <div class="viewDetails">
+          <div class="viewDetails__txt">View details</div>
+        </div>
     </div>
     <div class="Container__Navbar">
       <div class="Container__Navbar--Btn"><img src="Images/home.png"></div>
