--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/wil.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="wil.css">
+    <link rel="stylesheet" href="dist/wil.css">
 </head>
 
 <body>
@@ -22,13 +22,13 @@
 
 
         <div class="Box">
-            <div class="BoxOptions"><img src="Images/add.png" alt="">
+            <div class="Box__BoxOptions"><img src="Images/add.png" alt="">
                 <p>Refill activities</p><img src="Images/arrow.png"></div>
-            <div class="BoxOptions"><img src="Images/friends.png" alt="">
+            <div class="Box__BoxOptions"><img src="Images/friends.png" alt="">
                 <p>Pass to a friend</p><img src="Images/arrow.png"></div>
-            <div class="BoxOptions"><img src="Images/location.png" alt="">
+            <div class="Box__BoxOptions"><img src="Images/location.png" alt="">
                 <p>Our clubs</p><img src="Images/arrow.png"></div>
-            <div class="BoxOptions"><img src="Images/settings.png" alt="">
+            <div class="Box__BoxOptions"><img src="Images/settings.png" alt="">
                 <p>Account setup</p><img src="Images/arrow.png"></div>
         </div>
 
