--- a/02-JavaScript/07-DOM manipulations/Example/02-events/Etan/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/02-events/Etan/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="btn">OK</div>
-    <script src="/index.js"></script>
+    <button class="btn1" id="first">A</button>
+    <button class="btn2" id="second">B</button>
+    <button class="btn3" id="third" onclick="goodBye"(event)>C</button>
 </body>
+<script src="dist/index.js"></script>
 </html>
