--- a/02-JavaScript/07-DOM manipulations/Example/02-events/Etan/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/02-events/Etan/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <button class="btn1" id="first">A</button>
-    <button class="btn2" id="second">B</button>
-    <button class="btn3" id="third" onclick="goodBye"(event)>C</button>
+    <button class="btn2" id="second" onclick="how(event)">B</button>
+    <button class="btn3" id="third" onclick="goodBye(event)">C</button>
+    <h1>Change me!</h1>
 </body>
 <script src="dist/index.js"></script>
 </html>
