--- a/02-JavaScript/07-DOM manipulations/Example/02-events/leon events/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/02-events/leon events/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="btn">click</button>
+    
+    <button class="btn" id="firstbutton" onwheel="handleRoll(event)">click</button>
+    <button class="btn" id='SecondtButton'>OK</button>
+    <script src="dist/index.js"></script>
 </body>
 </html>
