--- a/02-JavaScript/07-DOM manipulations/john/index.html
+++ b/02-JavaScript/07-DOM manipulations/john/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
-    <div class="btn">click on me</div>
-    <script src="index.js"></script>
+    <button class="btn" id='theFirstButton' onwheel="handleRoll(event)">OK</button>
+    <button class="btn" id='theSecondtButton'>OK</button>
+    <button class="btn" id='theThirdButton'>OK</button>
+    <button class="btn" id='theFourthButton'>OK</button>
+    <button class="btn" id='theFifthButton'>OK</button>
+    <button class="btn" id='theSixthButton'>OK</button>
+    <script src="dist/index.js"></script>
 </body>
 </html>
