--- a/02-JavaScript/07-DOM manipulations/Example/02-events/Etan/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/02-events/Etan/index.html
@@ -8,9 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <button class="btn1" id="first">A</button>
-    <button class="btn2" id="second" onclick="how(event)">B</button>
-    <button class="btn3" id="third" onclick="goodBye(event)">C</button>
+    <button class="btn" id="first">Up</button>
+    <div class="sides">
+    <button class="btn" id="second" onclick="how(event)">Left</button>
+    <button class="btn" id="second" onclick="how(event)">Right</button>
+</div>
+    <button class="btn" id="third" onclick="goodBye(event)">Down</button>
     <h1>Change me!</h1>
 </body>
 <script src="dist/index.js"></script>
