--- a/02-JavaScript/07-DOM manipulations/MichMich/folder/events.html
+++ b/02-JavaScript/07-DOM manipulations/MichMich/folder/events.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    img {
+        width: 500px;
+        height: 500px;
+    }
+</style>
+
 <body>
-    
-     <button class="btn" id="btnone">yes</button>
-     <button class="btn" id="btn2">no</button>
-     <button class="btn" id="btn3">maybe</button>
-     <button class="btn" id="btn4">yen</button>
-     <button class="btn" id="btn5">nos</button>
-     <script src="dist/events.js"></script>
+
+    <button class="btn" id="btn1">left</button>
+    <button class="btn" id="btn2">right</button>
+    <button class="btn" id="btn3">up</button>
+    <button class="btn" id="btn4">down</button>
+    <div class="img1"><img src="img/5a1887148d421802430d2d04.png" alt=""></div>
+
+    <script src="dist/events.js"></script>
 </body>
+
 </html>
