--- a/02-JavaScript/07-DOM manipulations/Example/02-events/group 2/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/02-events/group 2/index.html
@@ -12,6 +12,6 @@
     <button class="buttons" id="right" onclick="handleClick()">right</button>
     <button class="buttons" id="up" onclick="handleClick()">up</button>
     <button class="buttons" id="down" onclick="handleClick()">down</button>
-    <script src="dist/index.ts"></script>
+    <script src="dist/index.js"></script>
 </body>
 </html>
