--- a/02-JavaScript/07-DOM manipulations/Example/02-events/noa/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/02-events/noa/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-   <button id="button1" onmouseleave="RunMouseleave(event)">1</button> 
+   <!-- <button id="button1" onmouseleave="RunMouseleave(event)">1</button>  -->
+   <button class="button" id="buttonUp">up</button>
+   <button class="button" id="buttonDown">down</button>
+   <button class="button" id="buttonRight">right</button>
+   <button class="button" id="buttonLeft">left</button>
+
+   <div id="image">
+<img src="https://st2.depositphotos.com/3262383/6535/v/450/depositphotos_65350685-stock-illustration-beautiful-hand-drawn-ballerina.jpg" alt="">
+   </div>
    <script src="dist/index.js"></script>
 </body>
 </html>
