--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi.html
@@ -17,8 +17,8 @@
     <div class="Container__Roi">
       <p><b>You are 72% active<br>this month than last</b></p>
       <div class="gBox">
-        <svg width="100%" height="300" fill="black" stroke="#9966cc" stroke-width="20" stroke-linecap="round">
-        <circle class="gauge" transform="rotate(150 200 200)" cy="120" r="120" pathLength="170"/>
+        <svg width="600" height="300" fill="black" stroke="#9966cc" stroke-width="20" stroke-linecap="round">
+        <circle class="gauge" transform="rotate(150 200 200)" cy="130" r="120" pathLength="170"/>
         </svg>
         <div class="gBox__innerCircle">
           <div class="gBox__innerCircle--1">🔥</div>
