--- a/02-JavaScript/07-DOM manipulations/MichMich/folder/events.html
+++ b/02-JavaScript/07-DOM manipulations/MichMich/folder/events.html
@@ -11,15 +11,16 @@
     img {
         width: 500px;
         height: 500px;
+        position: absolute;
     }
 </style>
 
 <body>
 
-    <button class="btn" id="btn1">left</button>
-    <button class="btn" id="btn2">right</button>
-    <button class="btn" id="btn3">up</button>
-    <button class="btn" id="btn4">down</button>
+    <button class="btn" id="left">left</button>
+    <button class="btn" id="right">right</button>
+    <button class="btn" id="up">up</button>
+    <button class="btn" id="down">down</button>
     <div class="img1"><img src="img/5a1887148d421802430d2d04.png" alt=""></div>
 
     <script src="dist/events.js"></script>
