--- a/02-JavaScript/07-DOM manipulations/Example/02-events/leon hw/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/02-events/leon hw/index.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
-    <img src="" alt="">
+    <div class="gridimg">
+        <div class="gridimg_box"  style="background-image: url(img/batman.jpg);"></div>
+        <div class="gridimg_box" style="background-image: url(img/joker.jpeg);"></div>
+        <div class="gridimg_box" style="background-image: url(img/spider-man.jpeg);"></div>
+        <div class="gridimg_box" style="background-image: url(img/superman.jpg);"></div>
+        <div class="gridimg_description">sfdsdf</div>
+    </div>
+    
     <script src=""></script>
 </body>
 </html>
