--- a/02-JavaScript/07-DOM manipulations/Example/02-events/leon hw/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/02-events/leon hw/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <div class="gridimg">
-        <div class="gridimg_box"  style="background-image: url(img/batman.jpg);"></div>
-        <div class="gridimg_box" style="background-image: url(img/joker.jpeg);"></div>
-        <div class="gridimg_box" style="background-image: url(img/spider-man.jpeg);"></div>
-        <div class="gridimg_box" style="background-image: url(img/superman.jpg);"></div>
-        <div class="gridimg_description">sfdsdf</div>
+        <div class="gridimg_box" id="batman" style="background-image: url(img/batman.jpg);"></div>
+        <div class="gridimg_box" id="joker" style="background-image: url(img/joker.jpeg);"></div>
+        <div class="gridimg_box" id="spiderman"  style="background-image: url(img/spider-man.jpeg);"></div>
+        <div class="gridimg_box" id="superman" style="background-image: url(img/superman.jpg);"></div>
+        <div class="gridimg_description">
+            <label id = "title">
+                ddfdsfdsf
+                </label>
+        </div>
     </div>
     
     <script src=""></script>
