--- a/02-JavaScript/07-DOM manipulations/Example/02-events/leon hw/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/02-events/leon hw/index.html
@@ -8,18 +8,15 @@
     <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
-    <div class="gridimg">
-        <div class="gridimg_box" id="batman" style="background-image: url(img/batman.jpg);"></div>
-        <div class="gridimg_box" id="joker" style="background-image: url(img/joker.jpeg);"></div>
-        <div class="gridimg_box" id="spiderman"  style="background-image: url(img/spider-man.jpeg);"></div>
-        <div class="gridimg_box" id="superman" style="background-image: url(img/superman.jpg);"></div>
-        <div class="gridimg_description">
-            <label id = "title">
-                ddfdsfdsf
-                </label>
-        </div>
+    <div class="main">
+        <img src="img/batman.jpg" alt="batman">
+        <img src="img/joker.jpeg" alt="joker">
+        <img src="img/spider-man.jpeg" alt="spiderman">
+        <img src="img/superman.jpg" alt="superman">
     </div>
+
+    <div id="text"></div>
     
-    <script src=""></script>
+    <script src="dist/index.js"></script>
 </body>
 </html>
