--- a/02-JavaScript/07-DOM manipulations/OmriAharonov/events/homeWork/gallery.html
+++ b/02-JavaScript/07-DOM manipulations/OmriAharonov/events/homeWork/gallery.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="dist/gallery.css">
     <title>Gallery</title>
 </head>
 <body>
     <div class="box">
         <div class="gallery">
-            <img id="1" src="https://picsum.photos/seed/picsum/200/300" style="height: 90%; width: 100%;"> 
-            <img id="2" src="https://picsum.photos/seed/picsum/200/300" style="height: 90%; width: 100%;">
-            <img id="3" src="https://picsum.photos/seed/picsum/200/300" style="height: 90%; width: 100%;">
-            <img id="4" src="https://picsum.photos/seed/picsum/200/300" style="height: 90%; width: 100%;">
-            <img id="5" src="https://picsum.photos/seed/picsum/200/300" style="height: 90%; width: 100%;">
+            <img  src="https://picsum.photos/seed/picsum/200/300" > 
+            <img  src="https://picsum.photos/seed/picsum/200/300" >
+            <img  src="https://picsum.photos/seed/picsum/200/300" >
+            <img  src="https://picsum.photos/seed/picsum/200/300" >
+            <img  src="https://picsum.photos/seed/picsum/200/300" >
         </div>
         <div class="description"></div>
     </div>
