--- a/02-JavaScript/07-DOM manipulations/Example/02-events/Etan Hw/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/02-events/Etan Hw/index.html
@@ -12,7 +12,9 @@
         <img src="./Imgs/mom.jpeg" alt="" id="mom">
         <img src="./Imgs/Tamir.jpeg" alt="" id="Tamir">
         <img src="./Imgs/Romi2.JPG" alt="" id="Romi">
-        <img src="./Imgs/dad and benji.jpeg" alt="" id="dadndBen">
+        <img src="./Imgs/dad.jpeg" alt="" id="dad">
+        <img src="./Imgs/Benji.jpeg" alt="" id="Benji">
+        <img src="./Imgs/Ning.jpeg" alt="" id="Ning">
         <img src="./Imgs/Citron.jpeg" alt="" id="Citron">
         <img src="./Imgs/Chen.jpeg" alt="" id="Chen">
         <img src="./imgs/Me johni and avi.jpeg" alt="" id="Mejohnindavi">
