--- a/02-JavaScript/07-DOM manipulations/Andrew/event/index.html
+++ b/02-JavaScript/07-DOM manipulations/Andrew/event/index.html
@@ -22,8 +22,10 @@
         </div>
         <div class="content__discription obs" id="galleryDisc"></div>
 
-        <img src="https://gcdn.pbrd.co/images/RRXPvUOti0GE.jpg?o=1" class="bigPic1 obs">
+        <img src="https://gcdn.pbrd.co/images/RRXPvUOti0GE.jpg?o=1" class="bigPic obs" id="big1">
         <div class="content__discription obs" id="bigPic1Disc"></div>
+        <img src="https://gcdn.pbrd.co/images/O92rRNdDWd0f.png?o=1" class="bigPic obs" id="big2">
+        <div class="content__discription obs" id="bigPic2Disc"></div>
 
        
 
