--- a/02-JavaScript/07-DOM manipulations/wil/index.html
+++ b/02-JavaScript/07-DOM manipulations/wil/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
-    <h1 id = "1" >aaa</h1>
-    <h2 id="2">bbb</h2>
-    <h3 id="3">ccc</h3>
-    <p class="paragraph">ddd</p>
+    <div class="container">
+<img id="spiderman" src="https://image.api.playstation.com/vulcan/img/rnd/202011/0714/vuF88yWPSnDfmFJVTyNJpVwW.png" alt="">
+<img id="superman" src="https://static.timesofisrael.com/www/uploads/2013/07/Comic-Con-Superman-A_Horo-e1374405660636-1024x640.jpg" alt="">
+<img id="catwoman" src="https://www.sideshow.com/storage/product-images/907510/catwoman_dc-comics_silo.png" alt="">
+<img id="supergirl" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/supergirl-season-6-melissa-benoist-1636456117.jpg" alt="">
+</div>
+<div id="text"></div>
     <script src="dist/index.js"></script>
 </body>
 </html>
