--- a/02-JavaScript/07-DOM manipulations/mishahw2/index.html
+++ b/02-JavaScript/07-DOM manipulations/mishahw2/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="footer">
-        <p id='deafultText'> Those are my pets </p>
+        <p id='deafultText'></p>
     </div>
     <div> *available for adoption</div>
 
