--- a/02-JavaScript/07-DOM manipulations/OmriAharonov/events/homeWork/gallery.html
+++ b/02-JavaScript/07-DOM manipulations/OmriAharonov/events/homeWork/gallery.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=The+Nautigal&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Yellowtail&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="dist/gallery.css">
     <title>Gallery</title>
 </head>
@@ -13,29 +15,27 @@
 
     <div class="gallery">
 
-        <div class="pic"
-            style="background-image: url(https://previews.123rf.com/images/melpomen/melpomen1608/melpomen160800338/60901811-aerial-view-of-manhattan-new-york-looking-north-up-central-park.jpg);">
+        <div class="pic">
+            <img
+                src="https://previews.123rf.com/images/melpomen/melpomen1608/melpomen160800338/60901811-aerial-view-of-manhattan-new-york-looking-north-up-central-park.jpg">
             <div class="text">New York</div>
             <p class="description" id="1">Manhattan skyline view</p>
         </div>
-        <div class="pic"
-            style="background-image: url(https://i.pinimg.com/originals/8a/da/e3/8adae3abcb9abfdc8ad105d6bfb557e6.jpg);">
+        <div class="pic">
+            <img src="https://i.pinimg.com/originals/8a/da/e3/8adae3abcb9abfdc8ad105d6bfb557e6.jpg">
             <div class="text">maldives</div>
             <p class="description" id="2">Fesdu Island resort</p>
         </div>
-        <div class="pic"
-            style="background-image: url(https://i.natgeofe.com/k/679e983c-4461-4398-bb6d-9b508fe3e4de/norway-northern-lights_4x3.jpg);">
-            <div class="text">Norway</div>
-            <p class="description" id="3">northern lights</p>
-        </div>
-        <div class="pic" style="background-image: url(https://live.staticflickr.com/968/41338960465_162e7b16a6_b.jpg);">
+        <div class="pic">
+            <img src="https://live.staticflickr.com/968/41338960465_162e7b16a6_b.jpg">
             <div class="text">New Zealand</div>
-            <p class="description" id="4">Lake Matheson, and the reflections of mount Tasman and Cook</p>
+            <p class="description" id="3">Lake Matheson, and the reflections of mount Tasman and Cook</p>
         </div>
-        <div class="pic"
-            style="background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Westernwall2.jpg/1200px-Westernwall2.jpg);">
+        <div class="pic">
+            <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Westernwall2.jpg/1200px-Westernwall2.jpg">
             <div class="text">Jerusalm</div>
-            <p class="description" id="5">The western wall</p>
+            <p class="description" id="4">The western wall</p>
         </div>
 
     </div>
