--- a/תרגול/אתגר/html.html
+++ b/תרגול/אתגר/html.html
@@ -12,15 +12,20 @@
 <body>
     <div class="main">
         <h1>Task #1</h1>
-        <form class="form">
-            <input class="input" type="text" placeholder="First name">
-            <input class="input" type="text" placeholder="Last name">
-            <input class="input" type="text" placeholder="Age">
+        <form class="form" onsubmit="hendleSubmit(event)">
+            <input class="input" type="text" name="name" placeholder="First name">
+            <input class="input" type="text" name="lastname" placeholder="Last name">
+            <input class="input" type="text" name="age" placeholder="Age">
 
             <input type="submit" value="Submit">
         </form>
-    </div>
 
+        <h1>The list</h1>
+        <div class="textPush">
+
+        </div>
+    </div>
+    <script src="./index.js"></script>
 </body>
 
 </html>
