--- a/02-JavaScript/07-DOM manipulations/tamir2/index.html
+++ b/02-JavaScript/07-DOM manipulations/tamir2/index.html
@@ -18,12 +18,21 @@
         <div class='box 6'></div>
         <div class='box 7'></div>
     </div> -->
-    <button class='btn' id='theone' onclick="runbtn2(event)">1</button>
+    <!-- <button class='btn' id='theone' onclick="runbtn2(event)">1</button>
     <button class='btn' id='thetwo'>2</button>
     <button class='btn' id='thethe'>3</button>
     <button class='btn' id='thefor'>4</button>
-    <button class='btn' id='thefive'>5</button>
+    <button class='btn' id='thefive'>5</button> -->
 
+    <button class='btn' id='up'>up</button>
+    <button class='btn' id='down'>down</button>
+    <button class='btn' id='right'>right</button>
+    <button class='btn' id='left'>left</button>
+    <div>
+        <img id='supermen'
+            src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/3bf59a9c-54c4-4125-ad19-879a50361062/da8db3d-0f60c47d-5a4a-4965-8d6e-1ed3f66139b4.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvM2JmNTlhOWMtNTRjNC00MTI1LWFkMTktODc5YTUwMzYxMDYyXC9kYThkYjNkLTBmNjBjNDdkLTVhNGEtNDk2NS04ZDZlLTFlZDNmNjYxMzliNC5qcGcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.o3Tnh4g3uKclq7IHFZVigZQz97Pw9v6A-ivLR5IZ648"
+            alt="">
+    </div>
     <script src="dist/index.js"></script>
 </body>
 
