--- a/02-JavaScript/08-forms/Example/index.html
+++ b/02-JavaScript/08-forms/Example/index.html
@@ -13,6 +13,7 @@
     <form onsubmit='handleSubmit(event)'>
         <input type="text" name="name" id="" placeholder="Name">
         <input type="tel" name="phone" id="" placeholder="phone number">
+        <input type="number" name="height" id="">
         <input type="color" name="color" id="">
         <input type="date" name="date" id="">
         <input type="submit" name='submit' value="Send">
