--- a/02-JavaScript/08-forms/misha/index.html
+++ b/02-JavaScript/08-forms/misha/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="dist/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <form onsubmit='handleSubmit(event)'>
-    
-    <input type="name" name='name' id='' placeholder="Name">
-    <input type="telephone" name='phone' id='' placeholder="Phone Number">
-    <input type="color" name='color' id=''>
-    <input type="date" name='date' id=''>
-    <input type='submit' name='submit' id='' value='send' >
-    
+
+        <input type="name" name='name' id='' placeholder="Name">
+        <input type="telephone" name='phone' id='' placeholder="Phone Number">
+        <input type="color" name='color' id=''>
+        <input type="date" name='date' id=''>
+        <input type='submit' name='submit' id='' value='send'>
+
     </form>
 
-    <script src='dist/index.js'></script>
+    <script src='index.js'></script>
 </body>
+
 </html>
