--- a/02-JavaScript/08-forms/shani forms/index.html
+++ b/02-JavaScript/08-forms/shani forms/index.html
@@ -33,6 +33,22 @@
         <input type="Password" name="password" id='' placeholder="password"><br>  
         <br><input type="submit" value="submit">  
 
+
+         <div class="bmi calculator">
+        <label>BMI/label><br>  
+        <input type="number" name="height" id="" placeholder="height">
+        <input type="number" name="weight" id="" placeholder="weight">
+        <br><input type="submit" value="calculate"> 
+         </div>
+
+    </form>
+
+    <form onsubmit='bmicalculate(event)'>
+        <label>BMI/label><br>  
+            <input type="number" name="height" id="" placeholder="height">
+            <input type="number" name="weight" id="" placeholder="weight">
+            <br><input type="submit" value="calculate"> 
+
     </form>
     <script src="dist/index.js"></script>
 </body>
