--- a/02-JavaScript/08-forms/Example/index.html
+++ b/02-JavaScript/08-forms/Example/index.html
@@ -17,6 +17,8 @@
         <input type="color" name="color" id="">
         <input type="date" name="date" id="">
         <input type="submit" name='submit' value="Send">
+        <input type="radio" name="radio" value='first'>
+        <input type="radio" name="radio" value='second'>
     </form>
     <script src='index.js'></script>
 </body>
