--- a/02-JavaScript/08-forms/Example/index.html
+++ b/02-JavaScript/08-forms/Example/index.html
@@ -20,6 +20,8 @@
         <input type="radio" name="radio" value='first'>
         <input type="radio" name="radio" value='second'>
     </form>
+   
+    <div id="card"></div>
     <script src='index.js'></script>
 </body>
 
