--- a/02-JavaScript/08-forms/mishaHW/index.html
+++ b/02-JavaScript/08-forms/mishaHW/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HW FORM</title>
 </head>
 <body>
+    <div class="wrapper">
+        <form action="" onsubmit="createCard(ev)">
+        
+            <input type="name" name='name' id='' placeholder="Name">
+            <input type="telephone" name='phone' id='' placeholder="Phone Number">
+            <input type="color" name='color' id=''>
+            <input type="date" name='date' id=''>
+            <input type='submit' name='submit' id='' value='send'>
     
+        </form>
+    </div>
 </body>
 </html>
