--- a/02-JavaScript/08-forms/OmriAharonov/BMI.html
+++ b/02-JavaScript/08-forms/OmriAharonov/BMI.html
@@ -7,9 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    
     <form onsubmit='handleSubmit(event)'>
-    <input type="number" name="weight" placeholder="weight">
-    <input type="number" name="height" placeholder="height">
+    <input type="number" name="weight" placeholder = "weight">
+    <input type="number" name="height" placeholder = "height">
+    <input type="submit" name="submit" value = "calculate">
+    <div class="bmi"></div>
     <script src="dist/BMI.js"></script>
+
 </body>
 </html>
