--- a/02-JavaScript/08-forms/shani forms/shani hw/index.html
+++ b/02-JavaScript/08-forms/shani forms/shani hw/index.html
@@ -17,48 +17,48 @@
         <div class="userInput">
             <label class="lable">Name</label>
             <br>
-            <input type="text" name="firstname" id="firstname" placeholder="First"  required>
-            <input type="text" name="lastname" id="lastname" placeholder="Last"  required>
+            <input type="text" name="firstname" id="firstname" placeholder="First" >
+            <input type="text" name="lastname" id="lastname" placeholder="Last" >
 
             <br>
 
             <label class="lable">Choose your username</label>
             <br>
-            <input type="text" name="username" id="username"  required>
+            <input type="text" name="username" id="username"  >
 
             <br>
 
             <label class="lable">Create a password</label>
             <br>
-            <input type="text" name="password" id="password"  required>
+            <input type="text" name="password" id="password" >
 
             <br>
 
             <label class="lable">Confirm your password</label>
             <br>
-            <input type="text" name="confirm" id="confirmp"  required>
+            <input type="text" name="confirm" id="confirmp" >
 
             <br>
 
             <label class="lable">Birthday</label>
             <br>
-            <input type="month" id="month" name="month" placeholder="Month" min="1970-01" max="2022-01" value="2022-01" >
+            <input type="month" id="month" name="month" placeholder="Month" min="1970-01" max="2022-01" value="1999-01" >
 
-            <input type="number" id="day" name="day" placeholder="Day" min="01" max="31"  required>
+            <input type="number" id="day" name="day" placeholder="Day" min="01" max="31"  >
 
-            <input type="number" id="year" name="year" placeholder="Year" min="1960" max="2022"  required>
+            <input type="number" id="year" name="year" placeholder="Year" min="1960" max="2022" >
 
             <br>
 
             <div class="select">
                 <label class="lable">Gender</label>
                 <br>
-                <select id="format"  required>
+                <select id="gender"  required>
                     <option selected disabled> I am... </option>
                     <option>Male</option>
                     <option>Female</option>
                     <option>Unicorn</option>
-                    <option>None of your business</option>
+                    <option >None of your business</option>
 
                 </select>
             </div>
@@ -67,7 +67,7 @@
 
             <label class="lable">Mobile phone</label>
             <br>
-            <input type="tel" id="phone" name="phone"  required>
+            <input type="tel" id="phone" name="phone" >
 
             <br>
             <input type="submit" id="submit" value="Submit">
