JS Form Homework

--- a/02-JavaScript/08-forms/Andrew/index.html
+++ b/02-JavaScript/08-forms/Andrew/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <form onsubmit='handleSumbit(event)' id="form">
-        <input type="number" name="height" id="" placeholder="height in M">
+        <input type="text" name="height" id="" placeholder="height in M">
         <input type="number" name="mass" id="" placeholder="mass in KG">
         <input type="submit" name="sumbit" value="send" id="">
 
