--- a/02-JavaScript/08-forms/Andrew/homework/index.html
+++ b/02-JavaScript/08-forms/Andrew/homework/index.html
@@ -31,8 +31,8 @@
     <div id="card">
         <div class="output" id="card_background"></div>
         <div id="card_logo"></div>
-        <div class="output" id="card_name">Jhon cena</div>
-        <div class="output" id="card_role">asistant to manager</div>
+        <div class="output" id="card_name"></div>
+        <div class="output" id="card_role"></div>
         <div class="output" id="card_pic"></div>
         <div class="output" id="card_id">00000000</div>
         <div class="output" id="card_DOB">dd/mm/yyyy</div>
