--- a/02-JavaScript/08-forms/shani forms/shani hw/index.html
+++ b/02-JavaScript/08-forms/shani forms/shani hw/index.html
@@ -59,6 +59,7 @@
                     <option>Female</option>
                     <option>Unicorn</option>
                     <option >None of your business</option>
+                    <option >Walmart Bag</option>
 
                 </select>
             </div>
