--- a/02-JavaScript/08-forms/noa/index.html
+++ b/02-JavaScript/08-forms/noa/index.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-   <form >
+   <form onsubmit="handleSubmit1(event)">
+<input type="text" placeholder="name">
+<input type="date" name="" id="" placeholder="birthday">
+<input type="text" name="" id="" placeholder="address">
+<input type="submit" value="get your birthday gift">
+
 
    </form>
    <script src="dist/index.js"></script> 
