--- a/02-JavaScript/08-forms/mishaHW/card.html
+++ b/02-JavaScript/08-forms/mishaHW/card.html
@@ -18,8 +18,8 @@
         </div>
 
         <div class="name">
-            <h1 id='fname'>Full the Name</h1>
-            <p id='lname'>Manager I Am</p>
+            <h1 id='fname'>Full the <span id='lname'>Name</span></h1>
+            <p >Manager I Am</p>
         </div>
 
         <div class='details'>
