--- a/02-JavaScript/08-forms/mishaHW/index.html
+++ b/02-JavaScript/08-forms/mishaHW/index.html
@@ -59,7 +59,6 @@
                     <option value="Intersex">Intersex</option>
                 </select>
             </div>
-
             <div class="section">
                 <label for='phone'>Mobile phone</label>
                 <input type="phone" name='phone' id='phone'>
@@ -70,6 +69,28 @@
             </div>
 
         </form>
+    </div>
+    <div class="wrapper2 visable">
+
+        <div class="banner">
+            <h1>Company</h1>
+        </div>
+        <div class="profilepic">
+            <img src="img/0007913116_41.jpeg" alt="">
+        </div>
+
+        <div class="name">
+            <h1 id='fname'>Full the <span id='lname'>Name</span></h1>
+            <p>Manager I Am</p>
+        </div>
+
+        <div class='details'>
+            <div class="dob" id='carddate'>1-1-2001</div>
+            <div class="password" id='cardmail'>blahblah</div>
+            <div class="gender" id='cardgend'>hemale</div>
+            <div class="phone" id='cardphone'>0548898035</div>
+        </div>
+
     </div>
     <script src='dist/index.js'></script>
 </body>
