--- a/02-JavaScript/08-forms/Rasheed HW-FORM/index.html
+++ b/02-JavaScript/08-forms/Rasheed HW-FORM/index.html
@@ -49,7 +49,7 @@
                 <header id="head">
                     <div class="workerId">
                         <h3>Worker card</h3>
-                        <h4>Embployed</h4>
+                        <h4>Employed</h4>
                     </div>
                     <img src="worker.png" id="logo" alt="">
                 </header>
